--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -937,37 +937,6 @@ CAF_SOCDEM_britain_national_populist:0 "카리브국"
 CAF_SOCDEM_britain_national_populist_ADJ:0 "서인도제도"
 CAF_SOCDEM_britain_national_populist_DEF:0 "카리브국"
 
-KAZ_CAF_SOCDEM_authoritarian_democrat:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_authoritarian_democrat_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_authoritarian_democrat_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_market_liberal:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_market_liberal_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_market_liberal_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_national_populist:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_national_populist_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_national_populist_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_paternal_autocrat:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_paternal_autocrat_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_paternal_autocrat_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_radical_socialist:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_radical_socialist_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_radical_socialist_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_social_conservative:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_social_conservative_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_social_conservative_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_social_democrat:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_social_democrat_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_social_democrat_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_social_liberal:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_social_liberal_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_social_liberal_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_syndicalist:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_syndicalist_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_syndicalist_DEF:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_totalist:0 "중앙아시아 연방"
-KAZ_CAF_SOCDEM_totalist_ADJ:0 "중앙아시아"
-KAZ_CAF_SOCDEM_totalist_DEF:0 "중앙아시아 연방"
-
 AUS_GER_authoritarian_democrat:0 "독일 제국"
 AUS_GER_authoritarian_democrat_ADJ:0 "독일"
 AUS_GER_authoritarian_democrat_DEF:0 "독일 제국"
@@ -2462,6 +2431,37 @@ ALO_KAZ_totalist:0 "알라쉬 오르다"
 ALO_KAZ_totalist_ADJ:0 "카자흐스탄"
 ALO_KAZ_totalist_DEF:0 "알라쉬 오르다"
 
+KAZ_caf_authoritarian_democrat:0 "중앙아시아 연방"
+KAZ_caf_authoritarian_democrat_ADJ:0 "중앙아시아"
+KAZ_caf_authoritarian_democrat_DEF:0 "중앙아시아 연방"
+KAZ_caf_market_liberal:0 "중앙아시아 연방"
+KAZ_caf_market_liberal_ADJ:0 "중앙아시아"
+KAZ_caf_market_liberal_DEF:0 "중앙아시아 연방"
+KAZ_caf_national_populist:0 "중앙아시아 연방"
+KAZ_caf_national_populist_ADJ:0 "중앙아시아"
+KAZ_caf_national_populist_DEF:0 "중앙아시아 연방"
+KAZ_caf_paternal_autocrat:0 "중앙아시아 연방"
+KAZ_caf_paternal_autocrat_ADJ:0 "중앙아시아"
+KAZ_caf_paternal_autocrat_DEF:0 "중앙아시아 연방"
+KAZ_caf_radical_socialist:0 "중앙아시아 연방"
+KAZ_caf_radical_socialist_ADJ:0 "중앙아시아"
+KAZ_caf_radical_socialist_DEF:0 "중앙아시아 연방"
+KAZ_caf_social_conservative:0 "중앙아시아 연방"
+KAZ_caf_social_conservative_ADJ:0 "중앙아시아"
+KAZ_caf_social_conservative_DEF:0 "중앙아시아 연방"
+KAZ_caf_social_democrat:0 "중앙아시아 연방"
+KAZ_caf_social_democrat_ADJ:0 "중앙아시아"
+KAZ_caf_social_democrat_DEF:0 "중앙아시아 연방"
+KAZ_caf_social_liberal:0 "중앙아시아 연방"
+KAZ_caf_social_liberal_ADJ:0 "중앙아시아"
+KAZ_caf_social_liberal_DEF:0 "중앙아시아 연방"
+KAZ_caf_syndicalist:0 "중앙아시아 연방"
+KAZ_caf_syndicalist_ADJ:0 "중앙아시아"
+KAZ_caf_syndicalist_DEF:0 "중앙아시아 연방"
+KAZ_caf_totalist:0 "중앙아시아 연방"
+KAZ_caf_totalist_ADJ:0 "중앙아시아"
+KAZ_caf_totalist_DEF:0 "중앙아시아 연방"
+
 SAF_federation_authoritarian_democrat:0 "남아프리카 연방"
 SAF_federation_authoritarian_democrat_ADJ:0 "남아프리카"
 SAF_federation_authoritarian_democrat_DEF:0 "남아프리카 연방"
@@ -2714,29 +2714,17 @@ MAG_GER_subject:0 "마다가스카르 자유주"
 MAG_GER_subject_ADJ:0 "마다가스카르"
 MAG_GER_subject_DEF:0 "마다가스카르 자유주"
 
-MOR_GER_subject:0 "모로코"
-MOR_GER_subject_ADJ:0 "모로코"
-MOR_GER_subject_DEF:0 "모로코"
-
-SOM_GER_subject: "소말리아 왕국"
-SOM_GER_subject_DEF:0 "소말리아"
-SOM_GER_subject_ADJ:0 "소말리아 왕국"
-
-GHA_GER_subject:0 "아샨티 왕국"
-GHA_GER_subject_ADJ:0 "아샨티"
-GHA_GER_subject_DEF:0 "아샨티 왕국"
-
 NGR_GER_subject:0 "나이제리아"
 NGR_GER_subject_ADJ:0 "나이제리아"
 NGR_GER_subject_DEF:0 "나이제리아"
 
+NGR_ENG_subject:0 "나이지리아 자유국"
+NGR_ENG_subject_ADJ:0 "나이지리아"
+NGR_ENG_subject_DEF:0 "나이지리아"
+
 CEA_GER_subject:0 "우방기샤리"
 CEA_GER_subject_ADJ:0 "우방기"
 CEA_GER_subject_DEF:0 "우방기샤리"
-
-GAB_GER_subject:0 "가봉"
-GAB_GER_subject_ADJ:0 "가봉"
-GAB_GER_subject_DEF:0 "가봉"
 
 CNR_GER_subject:0 "콩고"
 CNR_GER_subject_ADJ:0 "콩고"
@@ -2754,37 +2742,17 @@ LIB_AUTHDEM_subject:0 "라이베리아 자치령"
 LIB_AUTHDEM_subject_ADJ:0 "라이베리아"
 LIB_AUTHDEM_subject_DEF:0 "라이베리아 자치령"
 
-KEN_GER_subject:0 "케냐"
-KEN_GER_subject_ADJ:0 "케냐"
-KEN_GER_subject_DEF:0 "케냐"
+KEN_ENG_subject:0 "케냐"
+KEN_ENG_subject_ADJ:0 "케냐"
+KEN_ENG_subject_DEF:0 "케냐"
 
-UGA_GER_subject:0 "부간다"
-UGA_GER_subject_ADJ:0 "부간다"
-UGA_GER_subject_DEF:0 "부간다"
+ZAM_GER_subject:0 "참비아"
+ZAM_GER_subject_ADJ:0 "참비아"
+ZAM_GER_subject_DEF:0 "잠비아"
 
-ANG_GER_subject:0 "앙골라"
-ANG_GER_subject_ADJ:0 "앙골라"
-ANG_GER_subject_DEF:0 "앙골라"
-
-MOZ_GER_subject:0 "모잠비크"
-MOZ_GER_subject_ADJ:0 "모잠비크"
-MOZ_GER_subject_DEF:0 "모잠비크"
-
-BOT_GER_subject:0 "보츠와나"
-BOT_GER_subject_ADJ:0 "보츠와나"
-BOT_GER_subject_DEF:0 "보츠와나"
-
-ZIM_GER_subject:0 "로디지아"
-ZIM_GER_subject_ADJ:0 "로디지아"
-ZIM_GER_subject_DEF:0 "로디지아"
-
-YEM_GER_subject:0 "예멘"
-YEM_GER_subject_ADJ:0 "예멘"
-YEM_GER_subject_DEF:0 "예멘"
-
-SIE_GER_subject:0 "시에라리온 자유주"
-SIE_GER_subject_ADJ:0 "시에라리온"
-SIE_GER_subject_DEF:0 "시에라리온 자유주"
+ZAM_ENG_subject:0 "잠비아-니아살랜드 자유국"
+ZAM_ENG_subject_ADJ:0 "잠비아"
+ZAM_ENG_subject_DEF:0 "잠비아"
 
 CZE_czechoslavakia_authoritarian_democrat:0 "체코슬로바키아"
 CZE_czechoslavakia_authoritarian_democrat_ADJ:0 "체코슬로바키아"
@@ -3002,34 +2970,6 @@ INS_HOL_paternal_autocrat_DEF:0 "네덜란드령 동인도제도"
 INS_HOL_national_populist:0 "네덜란드령 동인도제도"
 INS_HOL_national_populist_ADJ:0 "인도네시아"
 INS_HOL_national_populist_DEF:0 "네덜란드령 동인도제도"
-
-BRA_ARG_market_liberal:0 "브라질"
-BRA_ARG_market_liberal_ADJ:0 "브라질"
-BRA_ARG_market_liberal_DEF:0 "브라질"
-BRA_ARG_national_populist:0 "브라질 과도정부"
-BRA_ARG_national_populist_ADJ:0 "브라질"
-BRA_ARG_national_populist_DEF:0 "브라질 과도정부"
-BRA_ARG_paternal_autocrat:0 "브라질 과도정부"
-BRA_ARG_paternal_autocrat_ADJ:0 "브라질"
-BRA_ARG_paternal_autocrat_DEF:0 "브라질 과도정부"
-BRA_ARG_radical_socialist:0 "브라질 코뮌 연합"
-BRA_ARG_radical_socialist_ADJ:0 "브라질"
-BRA_ARG_radical_socialist_DEF:0 "브라질 코뮌 연합"
-BRA_ARG_social_conservative:0 "브라질"
-BRA_ARG_social_conservative_ADJ:0 "브라질"
-BRA_ARG_social_conservative_DEF:0 "브라질"
-BRA_ARG_social_democrat:0 "브라질"
-BRA_ARG_social_democrat_ADJ:0 "브라질"
-BRA_ARG_social_democrat_DEF:0 "브라질"
-BRA_ARG_social_liberal:0 "브라질"
-BRA_ARG_social_liberal_ADJ:0 "브라질"
-BRA_ARG_social_liberal_DEF:0 "브라질"
-BRA_ARG_authoritarian_democrat:0 "브라질 과도정부"
-BRA_ARG_authoritarian_democrat_ADJ:0 "브라질"
-BRA_ARG_authoritarian_democrat_DEF:0 "브라질 과도정부"
-BRA_ARG_totalist:0 "브라질 코뮌 연합"
-BRA_ARG_totalist_ADJ:0 "브라질"
-BRA_ARG_totalist_DEF:0 "브라질 코뮌 연합"
 
 AUS_CIS_market_liberal:0 "시스라이타니아 오스트리아"
 AUS_CIS_market_liberal_ADJ:0 "오스트리아"
@@ -3520,36 +3460,21 @@ RAS_ARB_national_populist:0 "라시드 아라비아"
 RAS_ARB_national_populist_ADJ:0 "아라비아"
 RAS_ARB_national_populist_DEF:0 "라시드 아라비아"
 
-EMI_PAR_totalist:0 "파르마 코뮌"
-EMI_PAR_totalist_ADJ:0 "파르마"
-EMI_PAR_totalist_DEF:0 "파르마 코뮌"
-EMI_PAR_syndicalist:0 "파르마 코뮌"
-EMI_PAR_syndicalist_ADJ:0 "파르마"
-EMI_PAR_syndicalist_DEF:0 "파르마 코뮌"
-EMI_PAR_radical_socialist:0 "파르마 코뮌"
-EMI_PAR_radical_socialist_ADJ:0 "파르마"
-EMI_PAR_radical_socialist_DEF:0 "파르마 코뮌"
-EMI_PAR_social_democrat:0 "파르마"
-EMI_PAR_social_democrat_ADJ:0 "파르마"
-EMI_PAR_social_democrat_DEF:0 "파르마"
-EMI_PAR_social_liberal:0 "파르마"
-EMI_PAR_social_liberal_ADJ:0 "파르마"
-EMI_PAR_social_liberal_DEF:0 "파르마"
-EMI_PAR_market_liberal:0 "파르마"
-EMI_PAR_market_liberal_ADJ:0 "파르마"
-EMI_PAR_market_liberal_DEF:0 "파르마"
-EMI_PAR_social_conservative:0 "파르마"
-EMI_PAR_social_conservative_ADJ:0 "파르마"
-EMI_PAR_social_conservative_DEF:0 "파르마"
-EMI_PAR_authoritarian_democrat:0 "파르마"
-EMI_PAR_authoritarian_democrat_ADJ:0 "파르마"
-EMI_PAR_authoritarian_democrat_DEF:0 "파르마"
-EMI_PAR_paternal_autocrat:0 "파르마"
-EMI_PAR_paternal_autocrat_ADJ:0 "파르마"
-EMI_PAR_paternal_autocrat_DEF:0 "파르마"
-EMI_PAR_national_populist:0 "파르마"
-EMI_PAR_national_populist_ADJ:0 "파르마"
-EMI_PAR_national_populist_DEF:0 "파르마"
+PIR_REB:0 "히우그란지두술"
+PIR_REB_ADJ:0 "가우초"
+PIR_REB_DEF:0 "히우그란지두술"
+
+SPO_REB:0 "상파울루"
+SPO_REB_ADJ:0 "파울리스타"
+SPO_REB_DEF:0 "상파울루"
+
+BAH_REB:0 "바이아"
+BAH_REB_ADJ:0 "바이아"
+BAH_REB_DEF:0 "바이아"
+
+ISR_REB:0 "브라질 공화군"
+ISR_REB_ADJ:0 "공화군"
+ISR_REB_DEF:0 "브라질 공화군"
 
 ##############
 #Vanilla
@@ -3574,7 +3499,7 @@ CAN_UK_autonomy_puppet:0 "캐나다 프로빈스"
 CAN_UK_autonomy_integrated_puppet:0 "영국령 북아메리카"
 CAN_UK_autonomy_dominion_DEF:0 "캐나다 자치령"
 CAN_UK_autonomy_colony_DEF:0 "캐나다 연방"
-CAN_UK_autonomy_puppet_DEF:0 "캐나다 프로빈스"
+CAN_UK_autonomy_puppet_DEF:0 "캐나다 주"
 CAN_UK_autonomy_integrated_puppet_DEF:0 "영국령 북아메리카"
 USA_UK_autonomy_dominion:0 "북아메리카 자치령"
 USA_UK_autonomy_colony:0 "48 식민지"
