--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -341,67 +341,67 @@ AUS_national_populist:0 "오스트리아 제국"
 AUS_national_populist_ADJ:0 "오스트리아"
 AUS_national_populist_DEF:0 "오스트리아 제국"
 
-AZB_totalist:0 "아제르바이잔 사회주의 공화국"
-AZB_totalist_ADJ:0 "아제르바이잔"
-AZB_totalist_DEF:0 "아제르바이잔 사회주의 공화국"
-AZB_syndicalist:0 "아제르바이잔 사회주의 공화국"
-AZB_syndicalist_ADJ:0 "아제르바이잔"
-AZB_syndicalist_DEF:0 "아제르바이잔 사회주의 공화국"
-AZB_radical_socialist:0 "아제르바이잔 사회주의 공화국"
-AZB_radical_socialist_ADJ:0 "아제르바이잔"
-AZB_radical_socialist_DEF:0 "아제르바이잔 사회주의 공화국"
-AZB_social_democrat:0 "아제르바이잔"
-AZB_social_democrat_ADJ:0 "아제르바이잔"
-AZB_social_democrat_DEF:0 "아제르바이잔"
-AZB_social_liberal:0 "아제르바이잔"
-AZB_social_liberal_ADJ:0 "아제르바이잔"
-AZB_social_liberal_DEF:0 "아제르바이잔"
-AZB_market_liberal:0 "아제르바이잔"
-AZB_market_liberal_ADJ:0 "아제르바이잔"
-AZB_market_liberal_DEF:0 "아제르바이잔"
-AZB_social_conservative:0 "아제르바이잔"
-AZB_social_conservative_ADJ:0 "아제르바이잔"
-AZB_social_conservative_DEF:0 "아제르바이잔"
-AZB_authoritarian_democrat:0 "아제르바이잔"
-AZB_authoritarian_democrat_ADJ:0 "아제르바이잔"
-AZB_authoritarian_democrat_DEF:0 "아제르바이잔"
-AZB_paternal_autocrat:0 "아제르바이잔"
-AZB_paternal_autocrat_ADJ:0 "아제르바이잔"
-AZB_paternal_autocrat_DEF:0 "아제르바이잔"
-AZB_national_populist:0 "아제르바이잔 국가주의정부"
-AZB_national_populist_ADJ:0 "아제르바이잔"
-AZB_national_populist_DEF:0 "아제르바이잔 국가주의정부"
+AZE_totalist:0 "아제르바이잔 사회주의 공화국"
+AZE_totalist_ADJ:0 "아제르바이잔"
+AZE_totalist_DEF:0 "아제르바이잔 사회주의 공화국"
+AZE_syndicalist:0 "아제르바이잔 사회주의 공화국"
+AZE_syndicalist_ADJ:0 "아제르바이잔"
+AZE_syndicalist_DEF:0 "아제르바이잔 사회주의 공화국"
+AZE_radical_socialist:0 "아제르바이잔 사회주의 공화국"
+AZE_radical_socialist_ADJ:0 "아제르바이잔"
+AZE_radical_socialist_DEF:0 "아제르바이잔 사회주의 공화국"
+AZE_social_democrat:0 "아제르바이잔"
+AZE_social_democrat_ADJ:0 "아제르바이잔"
+AZE_social_democrat_DEF:0 "아제르바이잔"
+AZE_social_liberal:0 "아제르바이잔"
+AZE_social_liberal_ADJ:0 "아제르바이잔"
+AZE_social_liberal_DEF:0 "아제르바이잔"
+AZE_market_liberal:0 "아제르바이잔"
+AZE_market_liberal_ADJ:0 "아제르바이잔"
+AZE_market_liberal_DEF:0 "아제르바이잔"
+AZE_social_conservative:0 "아제르바이잔"
+AZE_social_conservative_ADJ:0 "아제르바이잔"
+AZE_social_conservative_DEF:0 "아제르바이잔"
+AZE_authoritarian_democrat:0 "아제르바이잔"
+AZE_authoritarian_democrat_ADJ:0 "아제르바이잔"
+AZE_authoritarian_democrat_DEF:0 "아제르바이잔"
+AZE_paternal_autocrat:0 "아제르바이잔"
+AZE_paternal_autocrat_ADJ:0 "아제르바이잔"
+AZE_paternal_autocrat_DEF:0 "아제르바이잔"
+AZE_national_populist:0 "아제르바이잔 국가주의정부"
+AZE_national_populist_ADJ:0 "아제르바이잔"
+AZE_national_populist_DEF:0 "아제르바이잔 국가주의정부"
 
-AZR_totalist:0 "테케 연합 코뮌"
-AZR_totalist_ADJ:0 "테케"
-AZR_totalist_DEF:0 "테케 연합 코뮌"
-AZR_syndicalist:0 "테케 연합 코뮌"
-AZR_syndicalist_ADJ:0 "테케"
-AZR_syndicalist_DEF:0 "테케 연합 코뮌"
-AZR_radical_socialist:0 "테케 연합 코뮌"
-AZR_radical_socialist_ADJ:0 "테케"
-AZR_radical_socialist_DEF:0 "테케 연합 코뮌"
-AZR_social_democrat:0 "테케 자유국"
-AZR_social_democrat_ADJ:0 "테케"
-AZR_social_democrat_DEF:0 "테케 자유국"
-AZR_social_liberal:0 "테케 자유국"
-AZR_social_liberal_ADJ:0 "테케"
-AZR_social_liberal_DEF:0 "테케 자유국"
-AZR_market_liberal:0 "테케 자유국"
-AZR_market_liberal_ADJ:0 "테케"
-AZR_market_liberal_DEF:0 "테케 자유국"
-AZR_social_conservative:0 "테케 자유국"
-AZR_social_conservative_ADJ:0 "테케"
-AZR_social_conservative_DEF:0 "테케 자유국"
-AZR_authoritarian_democrat:0 "테케 왕국"
-AZR_authoritarian_democrat_ADJ:0 "테케"
-AZR_authoritarian_democrat_DEF:0 "테케 왕국"
-AZR_paternal_autocrat:0 "테케 왕국"
-AZR_paternal_autocrat_ADJ:0 "테케"
-AZR_paternal_autocrat_DEF:0 "테케 왕국"
-AZR_national_populist:0 "테케 제국"
-AZR_national_populist_ADJ:0 "테케"
-AZR_national_populist_DEF:0 "테케 제국"
+TKE_totalist:0 "테케 연합 코뮌"
+TKE_totalist_ADJ:0 "테케"
+TKE_totalist_DEF:0 "테케 연합 코뮌"
+TKE_syndicalist:0 "테케 연합 코뮌"
+TKE_syndicalist_ADJ:0 "테케"
+TKE_syndicalist_DEF:0 "테케 연합 코뮌"
+TKE_radical_socialist:0 "테케 연합 코뮌"
+TKE_radical_socialist_ADJ:0 "테케"
+TKE_radical_socialist_DEF:0 "테케 연합 코뮌"
+TKE_social_democrat:0 "테케 자유국"
+TKE_social_democrat_ADJ:0 "테케"
+TKE_social_democrat_DEF:0 "테케 자유국"
+TKE_social_liberal:0 "테케 자유국"
+TKE_social_liberal_ADJ:0 "테케"
+TKE_social_liberal_DEF:0 "테케 자유국"
+TKE_market_liberal:0 "테케 자유국"
+TKE_market_liberal_ADJ:0 "테케"
+TKE_market_liberal_DEF:0 "테케 자유국"
+TKE_social_conservative:0 "테케 자유국"
+TKE_social_conservative_ADJ:0 "테케"
+TKE_social_conservative_DEF:0 "테케 자유국"
+TKE_authoritarian_democrat:0 "테케 왕국"
+TKE_authoritarian_democrat_ADJ:0 "테케"
+TKE_authoritarian_democrat_DEF:0 "테케 왕국"
+TKE_paternal_autocrat:0 "테케 왕국"
+TKE_paternal_autocrat_ADJ:0 "테케"
+TKE_paternal_autocrat_DEF:0 "테케 왕국"
+TKE_national_populist:0 "테케 제국"
+TKE_national_populist_ADJ:0 "테케"
+TKE_national_populist_DEF:0 "테케 제국"
 
 BAH_totalist:0 "바이아"
 BAH_totalist_ADJ:0 "바이아"
@@ -651,36 +651,36 @@ BHU_national_populist:0 "부탄"
 BHU_national_populist_ADJ:0 "부탄"
 BHU_national_populist_DEF:0 "부탄"
 
-BLR_totalist:0 "보르노 연방"
-BLR_totalist_ADJ:0 "보르노"
-BLR_totalist_DEF:0 "보르노 연방"
-BLR_syndicalist:0 "보르노 연방"
-BLR_syndicalist_ADJ:0 "보르노"
-BLR_syndicalist_DEF:0 "보르노 연방"
-BLR_radical_socialist:0 "보르노 연방"
-BLR_radical_socialist_ADJ:0 "보르노"
-BLR_radical_socialist_DEF:0 "보르노 연방"
-BLR_social_democrat:0 "보르노 공화국"
-BLR_social_democrat_ADJ:0 "보르노"
-BLR_social_democrat_DEF:0 "보르노 공화국"
-BLR_social_liberal:0 "보르노 공화국"
-BLR_social_liberal_ADJ:0 "보르노"
-BLR_social_liberal_DEF:0 "보르노 공화국"
-BLR_market_liberal:0 "보르노 공화국"
-BLR_market_liberal_ADJ:0 "보르노"
-BLR_market_liberal_DEF:0 "보르노 공화국"
-BLR_social_conservative:0 "보르노 공화국"
-BLR_social_conservative_ADJ:0 "보르노"
-BLR_social_conservative_DEF:0 "보르노 공화국"
-BLR_authoritarian_democrat:0 "보르노 토후국"
-BLR_authoritarian_democrat_ADJ:0 "보르노"
-BLR_authoritarian_democrat_DEF:0 "보르노 토후국"
-BLR_paternal_autocrat:0 "보르노 토후국"
-BLR_paternal_autocrat_ADJ:0 "보르노"
-BLR_paternal_autocrat_DEF:0 "보르노 토후국"
-BLR_national_populist:0 "보르노 토후국"
-BLR_national_populist_ADJ:0 "보르노"
-BLR_national_populist_DEF:0 "보르노 토후국"
+KBR_totalist:0 "보르노 연방"
+KBR_totalist_ADJ:0 "보르노"
+KBR_totalist_DEF:0 "보르노 연방"
+KBR_syndicalist:0 "보르노 연방"
+KBR_syndicalist_ADJ:0 "보르노"
+KBR_syndicalist_DEF:0 "보르노 연방"
+KBR_radical_socialist:0 "보르노 연방"
+KBR_radical_socialist_ADJ:0 "보르노"
+KBR_radical_socialist_DEF:0 "보르노 연방"
+KBR_social_democrat:0 "보르노 공화국"
+KBR_social_democrat_ADJ:0 "보르노"
+KBR_social_democrat_DEF:0 "보르노 공화국"
+KBR_social_liberal:0 "보르노 공화국"
+KBR_social_liberal_ADJ:0 "보르노"
+KBR_social_liberal_DEF:0 "보르노 공화국"
+KBR_market_liberal:0 "보르노 공화국"
+KBR_market_liberal_ADJ:0 "보르노"
+KBR_market_liberal_DEF:0 "보르노 공화국"
+KBR_social_conservative:0 "보르노 공화국"
+KBR_social_conservative_ADJ:0 "보르노"
+KBR_social_conservative_DEF:0 "보르노 공화국"
+KBR_authoritarian_democrat:0 "보르노 토후국"
+KBR_authoritarian_democrat_ADJ:0 "보르노"
+KBR_authoritarian_democrat_DEF:0 "보르노 토후국"
+KBR_paternal_autocrat:0 "보르노 토후국"
+KBR_paternal_autocrat_ADJ:0 "보르노"
+KBR_paternal_autocrat_DEF:0 "보르노 토후국"
+KBR_national_populist:0 "보르노 토후국"
+KBR_national_populist_ADJ:0 "보르노"
+KBR_national_populist_DEF:0 "보르노 토후국"
 
 BOL_totalist:0 "혁명 볼리비아"
 BOL_totalist_ADJ:0 "볼리비아"
@@ -2821,6 +2821,37 @@ GRE_national_populist:0 "그리스"
 GRE_national_populist_ADJ:0 "그리스"
 GRE_national_populist_DEF:0 "그리스"
 
+GRR_totalist:0 "헬레닉 사회주의 공화국"
+GRR_totalist_ADJ:0 "그리스"
+GRR_totalist_DEF:0 "헬레닉 사회주의 공화국"
+GRR_syndicalist:0 "헬레닉 사회주의 공화국"
+GRR_syndicalist_ADJ:0 "그리스"
+GRR_syndicalist_DEF:0 "헬레닉 사회주의 공화국"
+GRR_radical_socialist:0 "헬레닉 사회주의 공화국"
+GRR_radical_socialist_ADJ:0 "그리스"
+GRR_radical_socialist_DEF:0 "헬레닉 사회주의 공화국"
+GRR_social_democrat:0 "그리스"
+GRR_social_democrat_ADJ:0 "그리스"
+GRR_social_democrat_DEF:0 "그리스"
+GRR_social_liberal:0 "그리스"
+GRR_social_liberal_ADJ:0 "그리스"
+GRR_social_liberal_DEF:0 "그리스"
+GRR_market_liberal:0 "그리스"
+GRR_market_liberal_ADJ:0 "그리스"
+GRR_market_liberal_DEF:0 "그리스"
+GRR_social_conservative:0 "그리스"
+GRR_social_conservative_ADJ:0 "그리스"
+GRR_social_conservative_DEF:0 "그리스"
+GRR_authoritarian_democrat:0 "그리스"
+GRR_authoritarian_democrat_ADJ:0 "그리스"
+GRR_authoritarian_democrat_DEF:0 "그리스"
+GRR_paternal_autocrat:0 "그리스국"
+GRR_paternal_autocrat_ADJ:0 "그리스"
+GRR_paternal_autocrat_DEF:0 "그리스국"
+GRR_national_populist:0 "그리스"
+GRR_national_populist_ADJ:0 "그리스"
+GRR_national_populist_DEF:0 "그리스"
+
 GRU_totalist:0 "독일 사회주의 공화국"
 GRU_totalist_ADJ:0 "독일"
 GRU_totalist_DEF:0 "독일 사회주의 공화국"
@@ -3500,36 +3531,36 @@ KAM_national_populist:0 "카메룬"
 KAM_national_populist_ADJ:0 "카메룬"
 KAM_national_populist_DEF:0 "카메룬"
 
-KAZ_totalist:0 "바요만 코뮌"
-KAZ_totalist_ADJ:0 "바요만"
-KAZ_totalist_DEF:0 "바요만 코뮌"
-KAZ_syndicalist:0 "바요만 코뮌"
-KAZ_syndicalist_ADJ:0 "바요만"
-KAZ_syndicalist_DEF:0 "바요만 코뮌"
-KAZ_radical_socialist:0 "바요만 코뮌"
-KAZ_radical_socialist_ADJ:0 "바요만"
-KAZ_radical_socialist_DEF:0 "바요만 코뮌"
-KAZ_social_democrat:0 "키부 연맹"
-KAZ_social_democrat_ADJ:0 "키부"
-KAZ_social_democrat_DEF:0 "키부 연맹"
-KAZ_social_liberal:0 "키부 연맹"
-KAZ_social_liberal_ADJ:0 "키부"
-KAZ_social_liberal_DEF:0 "키부 연맹"
-KAZ_market_liberal:0 "키부 연맹"
-KAZ_market_liberal_ADJ:0 "키부"
-KAZ_market_liberal_DEF:0 "키부 연맹"
-KAZ_social_conservative:0 "키부 연맹"
-KAZ_social_conservative_ADJ:0 "키부"
-KAZ_social_conservative_DEF:0 "키부 연맹"
-KAZ_authoritarian_democrat:0 "키부 연맹"
-KAZ_authoritarian_democrat_ADJ:0 "키부"
-KAZ_authoritarian_democrat_DEF:0 "키부 연맹"
-KAZ_paternal_autocrat:0 "키부 연맹"
-KAZ_paternal_autocrat_ADJ:0 "키부"
-KAZ_paternal_autocrat_DEF:0 "키부 연맹"
-KAZ_national_populist:0 "키부 연맹"
-KAZ_national_populist_ADJ:0 "키부"
-KAZ_national_populist_DEF:0 "키부 연맹"
+KIV_totalist:0 "바요만 코뮌"
+KIV_totalist_ADJ:0 "바요만"
+KIV_totalist_DEF:0 "바요만 코뮌"
+KIV_syndicalist:0 "바요만 코뮌"
+KIV_syndicalist_ADJ:0 "바요만"
+KIV_syndicalist_DEF:0 "바요만 코뮌"
+KIV_radical_socialist:0 "바요만 코뮌"
+KIV_radical_socialist_ADJ:0 "바요만"
+KIV_radical_socialist_DEF:0 "바요만 코뮌"
+KIV_social_democrat:0 "키부 연맹"
+KIV_social_democrat_ADJ:0 "키부"
+KIV_social_democrat_DEF:0 "키부 연맹"
+KIV_social_liberal:0 "키부 연맹"
+KIV_social_liberal_ADJ:0 "키부"
+KIV_social_liberal_DEF:0 "키부 연맹"
+KIV_market_liberal:0 "키부 연맹"
+KIV_market_liberal_ADJ:0 "키부"
+KIV_market_liberal_DEF:0 "키부 연맹"
+KIV_social_conservative:0 "키부 연맹"
+KIV_social_conservative_ADJ:0 "키부"
+KIV_social_conservative_DEF:0 "키부 연맹"
+KIV_authoritarian_democrat:0 "키부 연맹"
+KIV_authoritarian_democrat_ADJ:0 "키부"
+KIV_authoritarian_democrat_DEF:0 "키부 연맹"
+KIV_paternal_autocrat:0 "키부 연맹"
+KIV_paternal_autocrat_ADJ:0 "키부"
+KIV_paternal_autocrat_DEF:0 "키부 연맹"
+KIV_national_populist:0 "키부 연맹"
+KIV_national_populist_ADJ:0 "키부"
+KIV_national_populist_DEF:0 "키부 연맹"
 
 KEN_totalist:0 "케냐"
 KEN_totalist_ADJ:0 "케냐"
@@ -4337,36 +4368,36 @@ MLY_national_populist:0 "신 슈리비자야 제국"
 MLY_national_populist_ADJ:0 "말라야"
 MLY_national_populist_DEF:0 "신 슈리비자야 제국"
 
-MNT_totalist:0 "키쿠유란드"
-MNT_totalist_ADJ:0 "키쿠유"
-MNT_totalist_DEF:0 "키쿠유란드"
-MNT_syndicalist:0 "키쿠유란드"
-MNT_syndicalist_ADJ:0 "키쿠유"
-MNT_syndicalist_DEF:0 "키쿠유란드"
-MNT_radical_socialist:0 "키쿠유란드"
-MNT_radical_socialist_ADJ:0 "키쿠유"
-MNT_radical_socialist_DEF:0 "키쿠유란드"
-MNT_social_democrat:0 "키쿠유란드"
-MNT_social_democrat_ADJ:0 "키쿠유"
-MNT_social_democrat_DEF:0 "키쿠유란드"
-MNT_social_liberal:0 "키쿠유란드"
-MNT_social_liberal_ADJ:0 "키쿠유"
-MNT_social_liberal_DEF:0 "키쿠유란드"
-MNT_market_liberal:0 "키쿠유란드"
-MNT_market_liberal_ADJ:0 "키쿠유"
-MNT_market_liberal_DEF:0 "키쿠유란드"
-MNT_social_conservative:0 "키쿠유란드"
-MNT_social_conservative_ADJ:0 "키쿠유"
-MNT_social_conservative_DEF:0 "키쿠유란드"
-MNT_authoritarian_democrat:0 "키쿠유란드"
-MNT_authoritarian_democrat_ADJ:0 "키쿠유"
-MNT_authoritarian_democrat_DEF:0 "키쿠유란드"
-MNT_paternal_autocrat:0 "키쿠유란드"
-MNT_paternal_autocrat_ADJ:0 "키쿠유"
-MNT_paternal_autocrat_DEF:0 "키쿠유란드"
-MNT_national_populist:0 "키쿠유란드"
-MNT_national_populist_ADJ:0 "키쿠유"
-MNT_national_populist_DEF:0 "키쿠유란드"
+KIK_totalist:0 "키쿠유란드"
+KIK_totalist_ADJ:0 "키쿠유"
+KIK_totalist_DEF:0 "키쿠유란드"
+KIK_syndicalist:0 "키쿠유란드"
+KIK_syndicalist_ADJ:0 "키쿠유"
+KIK_syndicalist_DEF:0 "키쿠유란드"
+KIK_radical_socialist:0 "키쿠유란드"
+KIK_radical_socialist_ADJ:0 "키쿠유"
+KIK_radical_socialist_DEF:0 "키쿠유란드"
+KIK_social_democrat:0 "키쿠유란드"
+KIK_social_democrat_ADJ:0 "키쿠유"
+KIK_social_democrat_DEF:0 "키쿠유란드"
+KIK_social_liberal:0 "키쿠유란드"
+KIK_social_liberal_ADJ:0 "키쿠유"
+KIK_social_liberal_DEF:0 "키쿠유란드"
+KIK_market_liberal:0 "키쿠유란드"
+KIK_market_liberal_ADJ:0 "키쿠유"
+KIK_market_liberal_DEF:0 "키쿠유란드"
+KIK_social_conservative:0 "키쿠유란드"
+KIK_social_conservative_ADJ:0 "키쿠유"
+KIK_social_conservative_DEF:0 "키쿠유란드"
+KIK_authoritarian_democrat:0 "키쿠유란드"
+KIK_authoritarian_democrat_ADJ:0 "키쿠유"
+KIK_authoritarian_democrat_DEF:0 "키쿠유란드"
+KIK_paternal_autocrat:0 "키쿠유란드"
+KIK_paternal_autocrat_ADJ:0 "키쿠유"
+KIK_paternal_autocrat_DEF:0 "키쿠유란드"
+KIK_national_populist:0 "키쿠유란드"
+KIK_national_populist_ADJ:0 "키쿠유"
+KIK_national_populist_DEF:0 "키쿠유란드"
 
 MON_totalist:0 "몽골 인민 공화국"
 MON_totalist_ADJ:0 "몽골"
@@ -5050,36 +5081,36 @@ PAL_national_populist:0 "팔레스타인"
 PAL_national_populist_ADJ:0 "팔레스타인"
 PAL_national_populist_DEF:0 "팔레스타인"
 
-PAK_totalist:0 "잔지바르 연방"
-PAK_totalist_ADJ:0 "잔지바르"
-PAK_totalist_DEF:0 "잔지바르 연방"
-PAK_syndicalist:0 "잔지바르 연방"
-PAK_syndicalist_ADJ:0 "잔지바르"
-PAK_syndicalist_DEF:0 "잔지바르 연방"
-PAK_radical_socialist:0 "잔지바르 연방"
-PAK_radical_socialist_ADJ:0 "잔지바르"
-PAK_radical_socialist_DEF:0 "잔지바르 연방"
-PAK_social_democrat:0 "잔지바르"
-PAK_social_democrat_ADJ:0 "잔지바르"
-PAK_social_democrat_DEF:0 "잔지바르"
-PAK_social_liberal:0 "잔지바르"
-PAK_social_liberal_ADJ:0 "잔지바르"
-PAK_social_liberal_DEF:0 "잔지바르"
-PAK_market_liberal:0 "잔지바르"
-PAK_market_liberal_ADJ:0 "잔지바르"
-PAK_market_liberal_DEF:0 "잔지바르"
-PAK_social_conservative:0 "잔지바르"
-PAK_social_conservative_ADJ:0 "잔지바르"
-PAK_social_conservative_DEF:0 "잔지바르"
-PAK_authoritarian_democrat:0 "잔지바르"
-PAK_authoritarian_democrat_ADJ:0 "잔지바르"
-PAK_authoritarian_democrat_DEF:0 "잔지바르"
-PAK_paternal_autocrat:0 "잔지바르"
-PAK_paternal_autocrat_ADJ:0 "잔지바르"
-PAK_paternal_autocrat_DEF:0 "잔지바르"
-PAK_national_populist:0 "잔지바르"
-PAK_national_populist_ADJ:0 "잔지바르"
-PAK_national_populist_DEF:0 "잔지바르"
+ZZB_totalist:0 "잔지바르 연방"
+ZZB_totalist_ADJ:0 "잔지바르"
+ZZB_totalist_DEF:0 "잔지바르 연방"
+ZZB_syndicalist:0 "잔지바르 연방"
+ZZB_syndicalist_ADJ:0 "잔지바르"
+ZZB_syndicalist_DEF:0 "잔지바르 연방"
+ZZB_radical_socialist:0 "잔지바르 연방"
+ZZB_radical_socialist_ADJ:0 "잔지바르"
+ZZB_radical_socialist_DEF:0 "잔지바르 연방"
+ZZB_social_democrat:0 "잔지바르"
+ZZB_social_democrat_ADJ:0 "잔지바르"
+ZZB_social_democrat_DEF:0 "잔지바르"
+ZZB_social_liberal:0 "잔지바르"
+ZZB_social_liberal_ADJ:0 "잔지바르"
+ZZB_social_liberal_DEF:0 "잔지바르"
+ZZB_market_liberal:0 "잔지바르"
+ZZB_market_liberal_ADJ:0 "잔지바르"
+ZZB_market_liberal_DEF:0 "잔지바르"
+ZZB_social_conservative:0 "잔지바르"
+ZZB_social_conservative_ADJ:0 "잔지바르"
+ZZB_social_conservative_DEF:0 "잔지바르"
+ZZB_authoritarian_democrat:0 "잔지바르"
+ZZB_authoritarian_democrat_ADJ:0 "잔지바르"
+ZZB_authoritarian_democrat_DEF:0 "잔지바르"
+ZZB_paternal_autocrat:0 "잔지바르"
+ZZB_paternal_autocrat_ADJ:0 "잔지바르"
+ZZB_paternal_autocrat_DEF:0 "잔지바르"
+ZZB_national_populist:0 "잔지바르"
+ZZB_national_populist_ADJ:0 "잔지바르"
+ZZB_national_populist_DEF:0 "잔지바르"
 
 PAR_totalist:0 "파라과이 사회주의 공화국"
 PAR_totalist_ADJ:0 "파라과이"
@@ -5793,6 +5824,37 @@ SAF_paternal_autocrat_DEF:0 "남아프리카 연방"
 SAF_national_populist:0 "남아프리카 연방"
 SAF_national_populist_ADJ:0 "남아프리카"
 SAF_national_populist_DEF:0 "남아프리카 연방
+
+SFR_totalist:0 "케이프 코뮌"
+SFR_totalist_ADJ:0 "남아프리카"
+SFR_totalist_DEF:0 "케이프 코뮌"
+SFR_syndicalist:0 "케이프 코뮌"
+SFR_syndicalist_ADJ:0 "남아프리카"
+SFR_syndicalist_DEF:0 "케이프 코뮌"
+SFR_radical_socialist:0 "케이프 코뮌"
+SFR_radical_socialist_ADJ:0 "남아프리카"
+SFR_radical_socialist_DEF:0 "케이프 코뮌"
+SFR_social_democrat:0 "남아프리카 연방"
+SFR_social_democrat_ADJ:0 "남아프리카"
+SFR_social_democrat_DEF:0 "남아프리카 연방"
+SFR_social_liberal:0 "남아프리카 연방"
+SFR_social_liberal_ADJ:0 "남아프리카"
+SFR_social_liberal_DEF:0 "남아프리카 연방"
+SFR_market_liberal:0 "남아프리카 연방"
+SFR_market_liberal_ADJ:0 "남아프리카"
+SFR_market_liberal_DEF:0 "남아프리카 연방"
+SFR_social_conservative:0 "남아프리카 혁명군"
+SFR_social_conservative_ADJ:0 "남아프리카"
+SFR_social_conservative_DEF:0 "남아프리카 혁명군"
+SFR_authoritarian_democrat:0 "남아프리카 혁명군"
+SFR_authoritarian_democrat_ADJ:0 "남아프리카"
+SFR_authoritarian_democrat_DEF:0 "남아프리카 혁명군"
+SFR_paternal_autocrat:0 "남아프리카 혁명군"
+SFR_paternal_autocrat_ADJ:0 "남아프리카"
+SFR_paternal_autocrat_DEF:0 "남아프리카 혁명군"
+SFR_national_populist:0 "남아프리카 연방"
+SFR_national_populist_ADJ:0 "남아프리카"
+SFR_national_populist_DEF:0 "남아프리카 연방"
 
 SAR_totalist:0 "사라왁 사회주의 공화국"
 SAR_totalist_ADJ:0 "사라왁"
@@ -7406,36 +7468,36 @@ VIE_social_conservative:0 "베트남"
 VIE_social_conservative_ADJ:0 "베트남"
 VIE_social_conservative_DEF:0 "베트남"
 
-VIN_totalist:0 "나미블랜드 코뮌"
-VIN_totalist_ADJ:0 "나미블랜드"
-VIN_totalist_DEF:0 "나미블랜드 코뮌"
-VIN_syndicalist:0 "나미블랜드 코뮌"
-VIN_syndicalist_ADJ:0 "나미블랜드"
-VIN_syndicalist_DEF:0 "나미블랜드 코뮌"
-VIN_radical_socialist:0 "나미블랜드 코뮌"
-VIN_radical_socialist_ADJ:0 "나미블랜드"
-VIN_radical_socialist_DEF:0 "나미블랜드 코뮌"
-VIN_social_democrat:0 "나미블랜드"
-VIN_social_democrat_ADJ:0 "나미블랜드"
-VIN_social_democrat_DEF:0 "나미블랜드"
-VIN_social_liberal:0 " 나미블랜드 공화국"
-VIN_social_liberal_ADJ:0 "나미블랜드"
-VIN_social_liberal_DEF:0 "나미블랜드 공화국"
-VIN_market_liberal:0 " 나미블랜드 공화국"
-VIN_market_liberal_ADJ:0 "나미블랜드"
-VIN_market_liberal_DEF:0 "나미블랜드 공화국"
-VIN_social_conservative:0 "나미블랜드"
-VIN_social_conservative_ADJ:0 "나미블랜드"
-VIN_social_conservative_DEF:0 "나미블랜드"
-VIN_authoritarian_democrat:0 "나미블랜드"
-VIN_authoritarian_democrat_ADJ:0 "나미블랜드"
-VIN_authoritarian_democrat_DEF:0 "나미블랜드"
-VIN_paternal_autocrat:0 "나미블랜드"
-VIN_paternal_autocrat_ADJ:0 "나미블랜드"
-VIN_paternal_autocrat_DEF:0 "나미블랜드"
-VIN_national_populist:0 "나미블랜드"
-VIN_national_populist_ADJ:0 "나미블랜드"
-VIN_national_populist_DEF:0 "나미블랜드"
+NBL_totalist:0 "나미블랜드 코뮌"
+NBL_totalist_ADJ:0 "나미블랜드"
+NBL_totalist_DEF:0 "나미블랜드 코뮌"
+NBL_syndicalist:0 "나미블랜드 코뮌"
+NBL_syndicalist_ADJ:0 "나미블랜드"
+NBL_syndicalist_DEF:0 "나미블랜드 코뮌"
+NBL_radical_socialist:0 "나미블랜드 코뮌"
+NBL_radical_socialist_ADJ:0 "나미블랜드"
+NBL_radical_socialist_DEF:0 "나미블랜드 코뮌"
+NBL_social_democrat:0 "나미블랜드"
+NBL_social_democrat_ADJ:0 "나미블랜드"
+NBL_social_democrat_DEF:0 "나미블랜드"
+NBL_social_liberal:0 " 나미블랜드 공화국"
+NBL_social_liberal_ADJ:0 "나미블랜드"
+NBL_social_liberal_DEF:0 "나미블랜드 공화국"
+NBL_market_liberal:0 " 나미블랜드 공화국"
+NBL_market_liberal_ADJ:0 "나미블랜드"
+NBL_market_liberal_DEF:0 "나미블랜드 공화국"
+NBL_social_conservative:0 "나미블랜드"
+NBL_social_conservative_ADJ:0 "나미블랜드"
+NBL_social_conservative_DEF:0 "나미블랜드"
+NBL_authoritarian_democrat:0 "나미블랜드"
+NBL_authoritarian_democrat_ADJ:0 "나미블랜드"
+NBL_authoritarian_democrat_DEF:0 "나미블랜드"
+NBL_paternal_autocrat:0 "나미블랜드"
+NBL_paternal_autocrat_ADJ:0 "나미블랜드"
+NBL_paternal_autocrat_DEF:0 "나미블랜드"
+NBL_national_populist:0 "나미블랜드"
+NBL_national_populist_ADJ:0 "나미블랜드"
+NBL_national_populist_DEF:0 "나미블랜드"
 
 VNC_totalist:0 "산마르코 코뮌"
 VNC_totalist_ADJ:0 "베네치아"
