--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
@@ -1,16 +1,16 @@
 l_english:
 
 ### Tooltips ###
-RUS_whrvolunit_tt:0 "6개의 루테니아 보병과 기병 자원병들이 만들어질 것입니다."
-RUS_ukrvolunit_tt:0 "6개의 우크라이나 보병과 기병 자원병들이 만들어질 것입니다."
-RUS_monattunit_tt:0 "3개의 새로운 기병 사단이 육성될 것입니다."
-RUS_finindunit_tt:0 "새로운 보병 사단과 기병 사단이 소규모 공중전단과 함께 만들어질 것입니다."
-RUS_azbrusunits_tt:0 "새로운 러시아 사단이 만들어질 것입니다."
-RUS_trmnavunits_tt:0 "새로운 함대가 블라디보스토크에 만들어질 것입니다."
-RUS_ukrnavunits_tt:0 "새로운 함대가 세바스토폴에 만들어질 것입니다."
+RUS_whrvolunit_tt:0 "6개의 루테니아인 보병과 기병 자원병들이 형성될 것입니다."
+RUS_ukrvolunit_tt:0 "6개의 우크라이나인 보병과 기병 자원병들이 형성될 것입니다."
+RUS_monattunit_tt:0 "3개의 새로운 기병 사단이 형성될 것입니다."
+RUS_finindunit_tt:0 "새로운 보병 사단과 기병 사단이 소규모 항공전대와 함께 형성될 것입니다."
+RUS_azbrusunits_tt:0 "새로운 러시아인 사단이 형성될 것입니다."
+RUS_trmnavunits_tt:0 "새로운 함대가 블라디보스토크에 형성될 것입니다."
+RUS_ukrnavunits_tt:0 "새로운 함대가 세바스토폴에 형성될 것입니다."
 
 ### Country Flags ###
-RUS_bypass_intervene_CHIJAP:0 "우리는 청과 함께 일본에 대항하여 싸움."
+RUS_bypass_intervene_CHIJAP:0 "우리는 청과 함께 일본에 대항하여 싸우고 있습니다"
 
 ### Focuses ###
 RUS_real_politik:0 "외교 정책: 현실정치"
@@ -34,7 +34,7 @@ RUS_georgia_status:0 "조지아 문제"
 RUS_georgia_status_desc:0 "조지아는 크지도 않고, 부유하지도 않고 우리 국가에 위협이 되는 것도 아니지만... 이는 원칙의 문제입니다. 이 땅은 우리가 세계 대전 동안에 도난당한 곳입니다. 곧 나머지 조각들과 함께 다시 뭉쳐질 것입니다."
 RUS_armenia_status:0 "아르메니아의 지위"
 RUS_armenia_status_desc:0 "아르메니아인들은 우리와 같은 신앙을 공유하고 있으며 우리에게 돌아오는 것만이 행복해질 수 있는 길입니다. 아닙니까?"
-RUS_advantage_GER_war_caucasus:0 "독일은 바쁘다, 양보를 강요하라!"
+RUS_advantage_GER_war_caucasus:0 "독일의 시선이 돌아갔다"
 RUS_advantage_GER_war_caucasus_desc:0 "독일이 세계 대전에 한번 더 빠졌으므로, 이제 우리는 캅카스 지역에서 양보를 요구해야 할 때입니다. 독일인들이 설마 양면전선에까지 한번 더 빠지고 싶어하겠습니까?"
 
 RUS_central_asia_focus:0 "중앙아시아 방향"
@@ -204,7 +204,7 @@ rusfor.15.d:0 "야만적인 몽골인들과 추악한 콜차크 제독이 러시
 rusfor.15.a:0 "좋았어!"
 
 rus_cooperation_canada:0 "캐나다와의 군사 협력"
-rus_cooperation_nat_france:0 "국민 프랑스와의 군사 협력"
+rus_cooperation_nat_france:0 "국가주의 프랑스와의 군사 협력"
 
 rusfor.16.t:0 "백루테니아의 운명"
 rusfor.16.d:0 "구 백루테니아 지역은 이제 우리 군대의 직할통치를 받고 있습니다. 그러나 이 백루테니아 지역의 경계를 오랫동안 이 상태로 둘 수는 없습니다. 많은 정치인들은 백루테니아를 완충지대 역할을 하는 국가로 부활시키고, 동부 지역은 러시아에 합병해야한다고 주장하고 있습니다. 반면에 민족주의자들은 이러한 해결방안에 대해 극구 반대하고 있으며, 백루테니아를 러시아에 영구히 통합시킬 것을 대안으로 내세우고 있습니다."
@@ -217,28 +217,28 @@ rusfor.17.d:0 "우리는 러시아 국경에 독립된 백루테니아가 존재
 rusfor.17.a:0 "괴뢰화하자!"
 rusfor.17.b:0 "완전한 독립이다!"
 
-rusfor.18.t:0 "독립한 벨라루스"
-rusfor.18.d:0 "벨라루스는 러시아의 영향아래 또 한번 독립하였습니다."
+rusfor.18.t:0 "독립한 백루테니아"
+rusfor.18.d:0 "백루테니아는 러시아의 영향 아래 다시 한번 독립하였습니다."
 rusfor.18.a:0 "군대를 소집하라!"
 
-rusfor.19.t:0 "Minority policies in White Ruthenia"
+rusfor.19.t:0 "백루테니아의 소수민족 정책"
 rusfor.19.d:0 "We have decided that it will be in Russia's best interest if White Ruthenia is absorbed into Russia. Now an important question arises about our minority policies towards our new subjects. Shall we continue with the pre-1914 Russification policies?"
-rusfor.19.a:0 "Guarantee wide rights for all minorities in White Ruthenia!"
-rusfor.19.b:0 "Restore Russification policies!"
+rusfor.19.a:0 "모든  소수민족들의 권리를 보장한다!"
+rusfor.19.b:0 "러시아화 정책을 재실시하라!"
 
-rusfor.20.t:0 "Integration of the White Ruthenia"
-rusfor.20.d:0 "The territories of the former White Ruthenian states are now fully absorbed into Mother Russia."
-rusfor.20.a:0 "Great!"
+rusfor.20.t:0 "백루테니아의 통합"
+rusfor.20.d:0 "이전에 백루테니아가 존재했던 이 지역은 이제 어머니 러시아에 온전히 흡수되었습니다."
+rusfor.20.a:0 "훌륭해!"
 
-rusfor.21.t:0 "Russification policies successful"
+rusfor.21.t:0 "러시아화 정책 성공"
 rusfor.21.d:0 "Thanks to our successful Russification policies the territories of White Ruthenia are now fully absorbed into Mother Russia."
-rusfor.21.a:0 "Great!"
+rusfor.21.a:0 "훌륭해!"
 
 rusfor.22.t:0 "우크라이나의 운명"
 rusfor.22.d:0 "The former Ukrainian state is now under our direct military control. We cannot hope to keep the areas of the former state in line for too long, though. Most politicians argue for the restoration of the Ukraine as a buffer state with the eastern parts of the country directly integrated into Russia. However, nationalists strongly disagree with this kind of solution and instead they demand that the Ukraine be permanently integrated into Russia."
 rusfor.22.a:0 "1936년 우크라이나의 국경을 복원한다!"
 rusfor.22.b:0 "영토의 대다수를 러시아에 합병하고 우크라이나를 복원시켜라!"
-rusfor.22.c:0 "러시아에 우크라이나를 합병시킨다!"
+rusfor.22.c:0 "우크라이나는 러시아의 일부가 될 것이다!"
 
 rusfor.23.t:0 "우크라이나의 독립"
 rusfor.23.d:0 "We have decided that it will be in Russia's best interest if an independent Ukraine emerges on the Russian border. How much independence will it really have?"
@@ -249,36 +249,36 @@ rusfor.24.t:0 "Independent Malorossia"
 rusfor.24.d:0 "Malorossia is once again independent under Russian supervision."
 rusfor.24.a:0 "Form Up the Troops!"
 
-rusfor.25.t:0 "Minority policies in the former Ukraine"
+rusfor.25.t:0 "우크라이나의 소수민족 정책"
 rusfor.25.d:0 "We have decided that it will be in Russia's best interest to integrate the Ukraine into Russia. An important question arises about our policies towards our new subjects. Shall we continue with the pre-1914 Russification policies or shall we guarantee wide array of cultural rights for our new subjects?"
-rusfor.25.a:0 "Guarantee wide rights for all minorities in Ukraine!"
-rusfor.25.b:0 "Restore Russification policies!"
+rusfor.25.a:0 "모든 우크라이나 소수민족들의 권리를 보장한다!"
+rusfor.25.b:0 "러시아화 정책을 재실시하라!"
 
-rusfor.26.t:0 "Integration of Ukraine"
-rusfor.26.d:0 "Territories of the former Ukrainian state are now fully absorbed into Mother Russia."
-rusfor.26.a:0 "Great!"
+rusfor.26.t:0 "우크라이나의 통합"
+rusfor.26.d:0 "이전에 우크라이나가 존재했던 이 지역은 이제 어머니 러시아에 온전히 흡수되었습니다."
+rusfor.26.a:0 "훌륭하군!"
 
 rusfor.27.t:0 "Russification policies successful"
 rusfor.27.d:0 "Thanks to our successful Russification policies the former Ukrainian state is now fully absorbed into Mother Russia."
 rusfor.27.a:0 "Great!"
 
-rusfor.28.t:0 "To Russia with love?"
+rusfor.28.t:0 "러시아와의 밀월 관계?"
 rusfor.28.d:0 "Many Conservative politicians, influential industrialists and high-ranking officers are pressing on us to send a mission to Russia. Pre-revolutionary First Lord of Navy and Minister of War Winston Churchill has become a leader of "Association for Better Canadian - Russian Relations" and it is widely believed that he would be an chief of mission to Russia if one was sent. Obsessed with retaking Britain and wiping out syndicalists Churchill believes that helping in reforming Russian army and bureaucracy will lead to creation the 'steam-roller' running over the French revolutionaries. That view is shared to high degree by many officers, both low and high ranks. What's more Canadian corporations are expecting large profits from investment in Russian underdeveloped market, in which demand for high-technological machinery is enormous."
-rusfor.28.a:0 "Send Churchill!"
-rusfor.28.b:0 "This is a waste of time."
+rusfor.28.a:0 "처칠을 보내라!"
+rusfor.28.b:0 "시간 낭비로군."
 
-rusfor.29.t:0 "Canadian-Russian cooperation"
+rusfor.29.t:0 "캐나다-러시아 협약"
 rusfor.29.d:0 "The Canadian Prime Minister has sent a British-Canadian mission to Russia to help in the modernisation of the army and improving the efficiency of our war industry. The commission is led by Winston Churchill, who has impressed the Russian officials with his achievements in both military and civilian fields. It is widely speculated that Canadian companies will invest large sums of money in our high-technology companies and factories crucial for warfare."
-rusfor.29.a:0 "It will strengthen the Entente!"
+rusfor.29.a:0 "협상국을 더 강하게 만들어 줄 것이다!"
 
-rusfor.30.t:0 "Canadian companies are investing!"
+rusfor.30.t:0 "캐나다 기업들이 투자에 나서다!"
 rusfor.30.d:0 "One of the advantages of being in the Entente is a high interest of Canadian corporations and firms in our market. As we develop we need machinery which can hardly be manufactured in our country. Foreign investment will help in modernisation efforts. This will benefit both us and Canada."
-rusfor.30.a:0 "It will strengthen the Entente!"
+rusfor.30.a:0 "협상국을 더 강하게 만들어 줄 것이다!"
 
-rusfor.31.t:0 "Help for Russian - Australasian Trade?"
+rusfor.31.t:0 "러시아 - 오스트랄라시아 무역 중개?"
 rusfor.31.d:0 "Recently the Russian Ministry of Foreign Relations has forwarded the proposition of tightening relations between us. We know from confidential sources that our mining companies are interested in Siberian deposits of diamonds, copper, and other various metals and minerals and they will need our support. We have to decide whether or not corporations can invest in Russia, thus helping to strengthen relations with them."
-rusfor.31.a:0 "Yes, we will grant them money!"
-rusfor.31.b:0 "No, this is a waste of resources."
+rusfor.31.a:0 "그래, 돈을 보낸다!"
+rusfor.31.b:0 "자원 낭비일 뿐이다."
 
 rusfor.32.t:0 "Australian corporations are investing in Siberia!"
 rusfor.32.d:0 "Despite the unstable situation at the Siberian border Australasian mining companies are investing! That's a sign that Australasian-Russian friendship is blossoming."
@@ -321,10 +321,10 @@ rusfor.40.t:0 "Russia-Japan is profitable again!"
 rusfor.40.d:0 "Due to our nations lowering the tariffs, sea trade between Russia and Japan has become profitable enough to let Kanazawa flourish!"
 rusfor.40.a:0 "That's great!"
 
-rusfor.41.t:0 "Russian investments in Manchuria?"
+rusfor.41.t:0 "러시아 자본의 만주 투자?"
 rusfor.41.d:0 "Recently the Ministry of Foreign Relations of Fengtian has forwarded the proposition of tightening relations between us. We know from confidential sources that our mining companies are interested in Manchurian deposits of coal, copper, magnesite and other various metals and minerals and they will need our support. We have to decide whether or not to support our corporations investments in Manchuria, thus helping to strengthen relations with them."
-rusfor.41.a:0 "Yes, we shall grant them money!"
-rusfor.41.b:0 "No, this is a waste of resources."
+rusfor.41.a:0 "그래, 돈을 보낸다!"
+rusfor.41.b:0 "자원 낭비일 뿐이다."
 
 rusfor.42.t:0 "Russian corporations are investing in Manchuria!"
 rusfor.42.d:0 "Despite the unstable situation in China, Russian mining companies are investing! That's a sign that Manchurian-Russian friendship is blossoming."
@@ -339,49 +339,49 @@ rusfor.44.t:0 "Japanese corporations are investing in Siberia!"
 rusfor.44.d:0 "Despite the potentially unstable situation in Siberia, Japanese mining companies are investing! That's a sign that Japanese-Russian friendship is blossoming."
 rusfor.44.a:0 "Great!"
 
-rusfor.45.t:0 "Anti-Internationale Pact"
+rusfor.45.t:0 "반인터내셔널 조약"
 rusfor.45.d:0 "The destabilising influence from the syndicalist movements grouped in so called Socialist Internationale was a constant worry for many world leaders. After formation of the new alliance block between Russia and Japan, Russia sough agreements with Japan for a five-year period, with automatic prolongation, to share information and assist each other in containing and eradicating syndicalist influence."
-rusfor.45.a:0 "Seek agreement with Japan"
-rusfor.45.b:0 "It is not necessary..."
+rusfor.45.a:0 "일본과의 협력을 모색하자"
+rusfor.45.b:0 "도움이 될 것 같지 않군..."
 
-rusfor.46.t:0 "Anti-Internationale Pact"
+rusfor.46.t:0 "반인터내셔널 조약"
 rusfor.46.d:0 "Russia has proposed a five-year agreement with automatic prolongation, to share information and mutually assist each other with containing and eradicating syndicalist influence."
-rusfor.46.a:0 "Sign the Pact"
-rusfor.46.b:0 "Refuse to sign the Pact"
+rusfor.46.a:0 "조약에 서명하라"
+rusfor.46.b:0 "조약 서명을 거부하라"
 
-rusfor.47.t:0 "Great Patriotic War against the Commune of France"
+rusfor.47.t:0 "프랑스 코뮌에 대한 대조국전쟁"
 rusfor.47.d:0 "The totalitarian French regime hates Russia and oppresses people for their love of God, honour, property and civil liberties. Everybody knows that the outcome of this war decides the fate of our Motherland. Citizens in big cities attack everything which has French origin or is connected to communists. State officials have already launched massive propaganda directed towards youngsters to induce them to enlist in the army or join the factories. Musicians, poets, painters and other artists from all political factions except Bolsheviks, have loudly announced their support for our regime. Orthodox clergy, like all major religion eminences, are saying prayers for the government and the troops at the front. Now that all predominant parties and trading unions have declared a 'sacred union' to not weaken Russia, we can safeguard our future!"
-rusfor.47.a:0 "We will march through Avenue des Champs-Elysées!"
+rusfor.47.a:0 "우리는 샹젤리제 거리에서 행진할 것이다!"
 
-rusfor.48.t:0 "Great Patriotic War against the Commune of France"
+rusfor.48.t:0 "프랑스 코뮌에 대한 대조국전쟁"
 rusfor.48.d:0 "The totalitarian French regime has declared war on Russia as they hate us and want to enslave everybody. Everybody knows that the outcome of this war will decide the fate of our Motherland. Citizens in big cities attack everything which has French origin or is connected to communists. State officials have already launched massive propaganda directed towards youngsters to induce them to enlist in the army or join the factories. Musicians, poets, painters as well as artists from all political factions, except some crazy democrats and Bolsheviks, have loudly announced their support for our regime. Orthodox clergy are saying prayers and blessings for our rulers and the troops at the front. Now that the government has brought everything under its control, we can safeguard our future!"
-rusfor.48.a:0 "We will march through Avenue des Champs-Elysées!"
+rusfor.48.a:0 "우리는 샹젤리제 거리에서 행진할 것이다!"
 
-rusfor.49.t:0 "Great Patriotic War against the German Empire"
+rusfor.49.t:0 "독일 제국에 대한 대조국전쟁"
 rusfor.49.d:0 "History repeated - we are again at war with Germany. Now we must show them that Slavs are united in the struggle against the brutal regime colonising Eastern Europe. Citizens in big cities attack everything which has German origin or is connected to the Reichspakt. State officials already have launched massive propaganda directed towards youngsters to induce them to enlist in the army or join the factories. Musicians, poets, painters and other artists from all political factions, except crazy monarchists and Bolsheviks, have loudly announced their support for our regime. Orthodox clergy, like all major religion eminences, are saying prayers for the government and the troops at the front. Now that all predominant parties and trading unions have declared a 'sacred union' to not weaken Russia, we can safeguard our future!"
-rusfor.49.a:0 "We will march under Brandenburg Gate!"
+rusfor.49.a:0 "우리는 브란덴부르크 문에서 행진할 것이다!"
 
-rusfor.50.t:0 "Great Patriotic War against the German Empire"
+rusfor.50.t:0 "독일 제국에 대한 대조국전쟁"
 rusfor.50.d:0 "History repeated - we are again at war with Germany. Now we must show them that Slavs are united in the struggle against the brutal regime colonising Eastern Europe. Citizens in big cities attack everything which has German origin or is connected to the Reichspakt. State officials already have launched massive propaganda directed towards youngsters to induce them to enlist in the army or join the factories. Musicians, poets, painters and other artists from all political factions, except crazy monarchists and Bolsheviks, have loudly announced their support for our regime. Orthodox clergy, like all major religion eminences, are saying prayers for the government and the troops at the front. Now that government has brought everything under its control, we can safeguard our future!"
-rusfor.50.a:0 "We will march under Brandenburg Gate!"
+rusfor.50.a:0 "우리는 브란덴부르크 문에서 행진할 것이다!"
 
-rusfor.51.t:0 "A New 1812"
-rusfor.51.d:0 "Our Enemies have reached the outskirts of Moscow! The nation must fully mobilise in order to stop them!"
-rusfor.51.a:0 "There is nowhere to retreat, Moscow is behind us!"
+rusfor.51.t:0 "1812년의 재림"
+rusfor.51.d:0 "적들이 모스크바 외곽까지 도래했습니다! 국가의 모든 것을 동원해 그들을 막아야만 합니다!"
+rusfor.51.a:0 "물러설 곳은 없다, 모스크바가 우리 등 뒤에 있다!"
 
-rusfor.52.t:0 "A New 1328"
-rusfor.52.d:0 "Our Enemies have reached the outskirts of Moscow! The nation must fully mobilise in order to stop them!"
-rusfor.52.a:0 "There is nowhere to retreat, Moscow is behind us!"
+rusfor.52.t:0 "1328년의 재림"
+rusfor.52.d:0 "적들이 모스크바 외곽까지 도래했습니다! 국가의 모든 것을 동원해 그들을 막아야만 합니다!"
+rusfor.52.a:0 "물러설 곳은 없다, 모스크바가 우리 등 뒤에 있다!"
 
-rusfor.53.t:0 "Armenia reincorporated into Russia"
-rusfor.53.d:0 "Areas of the former Ottoman puppet state of Armenia are now firmly integrated into Mother Russia."
-rusfor.53.a:0 "Great!"
+rusfor.53.t:0 "아르메니아가 러시아에 재통합되다"
+rusfor.53.d:0 "이전에 오스만 제국의 괴뢰국 아르메니아가 존재하던 이 지역은 이제 어머니 러시아에 온전히 통합되었습니다."
+rusfor.53.a:0 "훌륭하군!"
 
-rusfor.54.t:0 "The Tsar Visits Buckingham Palace"
+rusfor.54.t:0 "버킹엄 궁전에 방문한 차르"
 rusfor.54.d:0 "With the liberation of the United Kingdom, our English allies have regained their homeland! This is a great victory for the Entente Cordial! Our glorious Tsar took this opportunity to cement relations between the British and Russian Empires, paving the way for peace and stability from the chaos and anarchy that so nearly destroyed us after the Weltkrieg. The Tsar personally met Edward VIII and promised both economic and military support to the British Empire through these times of recovery. It is also noted that both the leaders agreed, that all the pain both nations suffered is the Germans fault, and rumours persist of war plans against the Germans to reclaim their rightful lands..."
-rusfor.54.a:0 "This is only the first step."
+rusfor.54.a:0 "한 발짝 나아갔을 뿐이다."
 
-rusfor.55.t:0 "Russian Assistance"
+rusfor.55.t:0 "러시아의 도움"
 rusfor.55.d:0 "With the signing of the economic and military support treaties between the British and Russian Empires the ports of Britain began to flood with Russian supplies and resources! This will allow our military to reorganise at a greater speed than normal. We should be back up to strength in no time!"
 rusfor.55.a:0 "Let the supplies flow!"
 
@@ -392,9 +392,9 @@ rusfor.56.b:0 "We are rich, pump money into the economy."
 rusfor.56.c:0 "Invest in our neighbours."
 rusfor.56.e:0 "Condemn Britain and Russia!"
 
-rusfor.57.t:0 "The Germans invest in our economy!"
+rusfor.57.t:0 "독일이 우리 경제에 투자하다!"
 rusfor.57.d:0 "The German economic minister has just announced that they plan to open more trade opportunities for us to invest in our own economy as a sign of friendship and economic stability. What could go wrong?"
-rusfor.57.a:0 "Great!"
+rusfor.57.a:0 "훌륭해!"
 
 rusfor.58.t:0 "The Germans condemn us!"
 rusfor.58.d:0 "The Germans appear to be feeling the pressure now that we are trading with the Russians and our imperial assets, this is causing the German economy to weaken and puts us in a stronger position in the world! In retaliation German Empire has ordered all its allies to cease all kinds of trade activity with us. We must prepare for military action sooner than we thought due to this diplomatic incident."
