--- a/Kaiserreich Korean Translation/localisation/KR_Mongolia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mongolia_l_english.yml
@@ -308,15 +308,15 @@ mongolia.3.b:0 "우리는 겸손한 사람들입니다 정중히 거절하겠습
 mongolia.4.t:0 "티베트가 제안을 수락했습니다"
 mongolia.4.d:0 "티베트가 우리와의 동맹을 수락했습니다. 우리는 이제 부처의 뜻을 함께 전파할 수 있을 겁니다."
 mongolia.4.a:0 "좋은 소식이야!"
-mongolia.5.t:0 "Xibei Lianbang Yiyuan and the Mongol Minority"
-mongolia.5.d:0 "After we have laid claim to the region of Inner Mongolia, the True Mongols in Xibei Lianbang Yiyuan have begun fighting the Hui government."
-mongolia.5.a:0 "Send in troops to aid our brothers!"
-mongolia.5.b:0 "This is not the time."
-mongolia.6.t:0 "Ethnic Skirmishes on the Frontier"
+mongolia.5.t:0 "서북 그리고 몽골의 소수민족"
+mongolia.5.d:0 "우리가 내몽골 지역에 대한 영유권을 주장한 후, 서북의 진정한 몽골은 후이 정부와 전쟁을 시작햤습니다."
+mongolia.5.a:0 "우리의 형제들을위해 군대를 파견하라!"
+mongolia.5.b:0 "지금은 때가 아니다."
+mongolia.6.t:0 "국경지역에서의 민족간 충돌"
 mongolia.6.d:0 "After Mongolia officially claimed its right over the Mongol-dominated territories on the frontier, there has been local unrest against us in these regions. To make matters worse, Sternberg has been sending troops to aid the partisans. The government should act soon, as the revolts get more violent by the day, and there is little room for diplomacy with revolts so close to our major cities."
 mongolia.6.a:0 "We shall not stand for this lack of respect! To arms!"
 mongolia.6.b:0 "Enough blood has been shed. Submit to Sternberg and the Mongols."
-mongolia.7.t:0 "Ungern Khan Descends Upon Xinjiang"
+mongolia.7.t:0 "운게른 칸이 신장을 침공하다"
 mongolia.7.d:0 "The Mad Baron has unleashed his Asiatic Cavalry Division on the steppes of the northwest, sending panic through the stumbling forces of the Ma clique. An outright counter invasion from our mountain fortresses seems thoroughly dangerous, but we may with stealth and forgery usurp power in the lowland province of Lanzhou, improving our defences tenfold by securing the western banks of the Yellow River entirely."
 mongolia.7.a:0 "Lanzhou shall be the western gate of the Millenarian state!"
 mongolia.7.b:0 "The Pure Kingdom Upon the Heavens shall remain neutral."
@@ -324,17 +324,17 @@ mongolia.8.t:0 "Vultures from Xa'an"
 mongolia.8.d:0 "Disaster! The Millenarian fanatics on our eastern border have descended from the mountains of Shanxi and seized control of the town of Lanzhou. With the addition of the I-Kuan Tao, we face enemies from all sides, can we afford to lose one city if we in turn win the war?"
 mongolia.8.a:0 "When the Mongol has been chastised, we shall level Mount Heng!"
 mongolia.8.b:0 "Vermin, your time shall come... in due time!"
-mongolia.9.t:0 "The Muslims Submit!"
-mongolia.9.d:0 "The Muslims to the south have submitted without a fight!"
-mongolia.9.a:0 "Huzzah!"
-mongolia.10.t:0 "Land Transfer"
+mongolia.9.t:0 "무슬림들의 복종!"
+mongolia.9.d:0 "남쪽의 무슬림들이 무력충돌 없이 우리에게 복종했습니다!"
+mongolia.9.a:0 "만세!"
+mongolia.10.t:0 "영토 이동"
 mongolia.10.d:0 "We have been forced to cede some of our provinces to Tibet."
-mongolia.10.a:0 "We have to comply"
-mongolia.11.t:0 "Victory in Xibei Lianbang Yiyuan"
+mongolia.10.a:0 "우린 따라야한다."
+mongolia.11.t:0 "서북과의 전쟁에서 승리하다!"
 mongolia.11.d:0 "After great fighting, we have at last subdued the Western Warlords! There is much to reward ourselves and soldiers here, including captured enemy supplies. How should the new populace, as well as these resources, be dealt with?"
-mongolia.11.a:0 "Loot the land and salt the earth!"
+mongolia.11.a:0 "땅을 약탈하고 소금을 뿌려라!"
 mongolia.11.b:0 "They shall be incorporated peacefully."
-mongolia.12.t:0 "Mongol Rule in Xinjiang, Qinghai and Gangsu"
+mongolia.12.t:0 "몽골이 신장,칭하이와 간쑤를 지배하다."
 mongolia.12.d:0 "After a period of consolidation, Ungern Khan has decided to cement his rule over the Chinese provinces formerly held by the criminally corrupt Ma family. This could be done either by setting up territoriality maimed puppet states or by integrating the populace into Mongolia proper."
 mongolia.12.a:0 "Set up an Uighur puppet state in outer Xinjiang."
 mongolia.12.b:0 "Partition the provinces into tributary states!"
@@ -342,65 +342,65 @@ mongolia.12.c:0 "All three provinces shall be ruled from Urga!"
 mongolia.13.t:0 "Independent Uighuria"
 mongolia.13.d:0 "They're not right in the head those crazy Mongols."
 mongolia.13.a:0 "Gah."
-mongolia.14.t:0 "War in Central Asia!"
+mongolia.14.t:0 "중앙아시아에서의 전쟁!"
 mongolia.14.d:0 "On our western border, the Turks have engaged in a bloody conflict! How shall we react to such news?"
 mongolia.14.a:0 "Join our Kazakh brothers in their fight!"
 mongolia.14.b:0 "We sympathise with the Turks... rally the hordes!"
 mongolia.14.c:0 "Central Asia is a waste of resources."
-mongolia.15.t:0 "Mongol Allies"
+mongolia.15.t:0 "몽골 동맹"
 mongolia.15.d:0 "The Mongols, hearing of our war, have asked to join us in our Holy War. They will be a strong ally, but the Baron is a tricky fellow. Should we encourage this alliance?"
 mongolia.15.a:0 "Welcome our Altaic brothers!"
 mongolia.15.b:0 "Turn those tricky Mongols back home... This is OUR war!"
-mongolia.16.t:0 "Mongol-Turkic Alliance"
+mongolia.16.t:0 "몽골-튀르크 동맹"
 mongolia.16.d:0 "The Turks have accepted our alliance!"
-mongolia.16.a:0 "Huzzah!"
+mongolia.16.a:0 "만세!"
 mongolia.17.t:0 "Mongol-Turkic Alliance Denied!"
 mongolia.17.d:0 "The Turks have refused our offer of alliance. How should we react to this slight?"
 mongolia.17.a:0 "Offer assistance for the Kazakhs instead."
 mongolia.17.b:0 "Allies be damned, attack the Turks!"
 mongolia.17.c:0 "Central Asia is a waste of resources after all..."
-mongolia.18.t:0 "Alma-Ata has Fallen!"
+mongolia.18.t:0 "알마아타가 무너지다!"
 mongolia.18.d:0 "The stronghold of Alma-Ata has fallen! We have the opportunity to punish the rebellious populous, and gain loot for our victorious hordes!"
-mongolia.18.a:0 "Loot the land and salt the earth!"
+mongolia.18.a:0 "땅을 약탈하고 소금을 뿌려라!"
 mongolia.18.b:0 "They shall be incorporated peacefully."
-mongolia.19.t:0 "Mongol Allies"
+mongolia.19.t:0 "몽골 동맹"
 mongolia.19.d:0 "The Mongols, hearing of our war, have asked to join us in our war against the Turks. They will be a strong ally with troops we need, but the Baron harbours similar radicalism. Should we encourage this alliance?"
-mongolia.19.a:0 "Welcome our Altaic brothers!"
-mongolia.19.b:0 "Refuse the Mongol intervention."
-mongolia.20.t:0 "Mongol-Kazakh Alliance"
+mongolia.19.a:0 "우리의 알타이족 형제들이여, 환영하네!"
+mongolia.19.b:0 "Refuse the Mongol intervent."
+mongolia.20.t:0 "몽골-카자흐 동맹"
 mongolia.20.d:0 "The Kazakhs have accepted our alliance!"
-mongolia.20.a:0 "Huzzah!"
+mongolia.20.a:0 "만세!"
 mongolia.21.t:0 "Mongol-Kazakh Alliance Denied!"
 mongolia.21.d:0 "The Kazakh have refused our offer of alliance. How should we react to this slight?"
 mongolia.21.a:0 "Offer assistance for the Turks instead."
 mongolia.21.b:0 "Allies be damned, attack the Kazakhs!"
 mongolia.21.c:0 "Central Asia is a waste of resources after all..."
-mongolia.22.t:0 "Mongol Allies"
+mongolia.22.t:0 "몽골 동맹"
 mongolia.22.d:0 "The Mongols, hearing of our war, have asked to join us in our war against the Turks. They will be a strong ally with troops we need, but the Baron harbours similar radicalism. Should we encourage this alliance?"
-mongolia.22.a:0 "Welcome our Altaic brothers!"
+mongolia.22.a:0 "우리의 알타이족 형제들이여, 환영하네!"
 mongolia.22.b:0 "Refuse the Mongol intervention."
 mongolia.23.t:0 "Mongol-Kazakh Alliance Denied!"
 mongolia.23.d:0 "The Kazakhs have ALSO refused our offer of alliance! How should we react to this slight?"
 mongolia.23.a:0 "Strike at the Kazakhs."
-mongolia.23.b:0 "Attack both parties!"
+mongolia.23.b:0 "양쪽 모두 공격하라!"
 mongolia.23.c:0 "Central Asia is a waste of resources after all..."
-mongolia.24.t:0 "Mongol Allies"
+mongolia.24.t:0 "몽골 동맹"
 mongolia.24.d:0 "The Mongols, hearing of our war, have asked to join us in our war against the Turks. They will be a strong ally with troops we need, but the Baron harbours similar radicalism. Should we encourage this alliance?"
-mongolia.24.a:0 "Welcome our Altaic brothers!"
+mongolia.24.a:0 "우리의 알타이족 형제들이여, 환영하네!"
 mongolia.24.b:0 "Refuse the Mongol intervention."
 mongolia.25.t:0 "Mongol-Turkic Alliance Denied!"
 mongolia.25.d:0 "The Turks have ALSO refused our offer of alliance! How should we react to this slight?"
 mongolia.25.a:0 "Strike at the Turks."
 mongolia.25.b:0 "Attack both parties!"
 mongolia.25.c:0 "Central Asia is a waste of resources after all..."
-mongolia.26.t:0 "The Need for Natural Resources"
+mongolia.26.t:0 "천연 자원에 대한 필요성"
 mongolia.26.d:0 "One major setback facing Mongolia is our lack of natural resources. The government may need to focus its policies on resources."
 mongolia.26.a:0 "Yes, we need resources. They are essential."
 mongolia.26.b:0 "No policy change is necessary."
 mongolia.27.t:0 "Khem-Beldyr Natural Resources"
 mongolia.27.d:0 "Many government advisers are supporting expanding mining operations in the province of Khem-Beldyr to mine the areas rich with natural resources. It would give us the ability to expand our industry further and help speed up our industrialisation."
-mongolia.27.a:0 "We need the resources! Expand mining operations!"
-mongolia.27.b:0 "We shall make do."
+mongolia.27.a:0 "우린 자원이 필요하다! 채광 작업을 확대하라!"
+mongolia.27.b:0 "우리는 할 것이다."
 mongolia.28.t:0 "새롭게 찾은 자원들"
 mongolia.28.d:0 "The investment placed into mining the province of Khem-Beldyr have paid off. The resources gained will soon make more than their original cost."
 mongolia.28.a:0 "Why didn't we think of this earlier?!"
@@ -435,7 +435,7 @@ mongolia.35.b:0 "Tögs-Ochiryn Namnansüren, the Mongol noble!"
 mongolia.35.c:0 "The 7th Changkya Khutukhtu, the pious holy man!"
 mongolia.36.t:0 "상천 합병"
 mongolia.36.d:0 "After hard fighting, we have at last subdued this pathetic Shangqing regime! The Khan is pleased with our victories that glorified his rule and made our beloved Mongolia much stronger and larger. There is much to reward ourselves and soldiers here,including captured enemy supplies. How should the new populace, and these resources, be dealt with?"
-mongolia.36.a:0 "Loot the land and salt the earth!"
+mongolia.36.a:0 "땅을 약탈하고 소금을 뿌려라!"
 mongolia.36.b:0 "They shall be incorporated peacefully."
 mongolia.37.t:0 "티베트 합병"
 mongolia.37.d:0 "Tibet is now under hooves of our horses...But we should remember our long friendship and cooperation with this people. Their government will be punished for their betrayal, but citizens of Tibetan mountains will probably agree to join our Empire under the rule of glorious Genghis Khan II! Tibetans know how to fight in the ice hills, and their soldiers will be beneficial to our mighty armies...But warriors of the Khan want to be rewarded for long bloody battles..."
@@ -482,7 +482,7 @@ mongolia.49.t:0 "몽골의 요구"
 mongolia.49.d:0 "After centuries, the Mongol Khan now decided to demand Macau from us. The Mongol Empire is now one of the strongest states in the Far East and fighting them is probably not a good idea."
 mongolia.49.a:0 "달리 선택지가 없다."
 mongolia.49.b:0 "몽골은 계속 싸워야 할 것이다!"
-mongolia.50.t:0 "Concessions For Peace?"
+mongolia.50.t:0 "평화를 위해 양보할것인가?"
 mongolia.50.d:0 "The war with Fengtian has so far been unsuccessful, and our enemy now occupies Chahar. Many within our government urge peace, lest our nation be reduced to rubble. To that end, we can offer Fengtian control of Chahar and Suiyuan in exchange for peace."
 mongolia.50.a:0 "제안을 보내라."
 mongolia.50.b:0 "차하르는 몽골의 것이다."
