--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -1045,7 +1045,7 @@ argcar.400.d:0 "현재 해체된 GOU의 구성원들에 의해 압박을 받은,
 argcar.400.a:0 "파렐 대통령 만세!"
 
 argcar.41.t:0 "파렐이 물러나기를 거부하다"
-argcar.41.d:0 "라미레즈의 사임 요구에 대응하여, 파렐은 대신 대통령 관저를 둘러싸고 있는 부에노스 아이레스의 수비수들에게 임무를 맡기고 라미레즈의 사임을 요구했습니다. 토마스 아돌포 두코 중령은 나머지 장군들이 라미레즈를 지지하며 쿠데타를 일으킬거라 확신하여, 3개의 전략 보병 연대를 요청하고 로마스 데 사모라 시로 보내서 라미레즈에게 압력을 가하기 위해 주요 건물에 자리를 잡았습니다."
+argcar.41.d:0 "라미레즈의 사임 요구에 대응하여, 파렐은 대신 대통령 관저를 둘러싸고 있는 부에노스 아이레스의 수비병들에게 임무를 맡기고 라미레즈의 사임을 요구했습니다. 토마스 아돌포 두코 중령은 나머지 장군들이 라미레즈를 지지하며 쿠데타를 일으킬거라 확신하여, 3개의 전략 보병 연대를 요청하고 로마스 데 사모라 시로 보내서 라미레즈에게 압력을 가하기 위해 주요 건물에 자리를 잡았습니다."
 argcar.41.a:0 "에두아르도 아발로스 장군이 라미레즈를 해방시켰다"
 argcar.41.b:0 "라미레즈를 사직시킨다"
 
