--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -2790,15 +2790,15 @@ GRP_national_populist:0 "적도 연합"
 GRP_national_populist_ADJ:0 "적도"
 GRP_national_populist_DEF:0 "적도 연합"
 
-GRE_totalist:0 "헬레닉 사회주의 공화국"
+GRE_totalist:0 "엘라다 사회주의 공화국"
 GRE_totalist_ADJ:0 "그리스"
-GRE_totalist_DEF:0 "헬레닉 사회주의 공화국"
-GRE_syndicalist:0 "헬레닉 사회주의 공화국"
+GRE_totalist_DEF:0 "엘라다 사회주의 공화국"
+GRE_syndicalist:0 "엘라다 사회주의 공화국"
 GRE_syndicalist_ADJ:0 "그리스"
-GRE_syndicalist_DEF:0 "헬레닉 사회주의 공화국"
-GRE_radical_socialist:0 "헬레닉 사회주의 공화국"
+GRE_syndicalist_DEF:0 "엘라다 사회주의 공화국"
+GRE_radical_socialist:0 "엘라다 사회주의 공화국"
 GRE_radical_socialist_ADJ:0 "그리스"
-GRE_radical_socialist_DEF:0 "헬레닉 사회주의 공화국"
+GRE_radical_socialist_DEF:0 "엘라다 사회주의 공화국"
 GRE_social_democrat:0 "그리스"
 GRE_social_democrat_ADJ:0 "그리스"
 GRE_social_democrat_DEF:0 "그리스"
@@ -2821,15 +2821,15 @@ GRE_national_populist:0 "그리스"
 GRE_national_populist_ADJ:0 "그리스"
 GRE_national_populist_DEF:0 "그리스"
 
-GRR_totalist:0 "헬레닉 사회주의 공화국"
+GRR_totalist:0 "엘라다 사회주의 공화국"
 GRR_totalist_ADJ:0 "그리스"
-GRR_totalist_DEF:0 "헬레닉 사회주의 공화국"
-GRR_syndicalist:0 "헬레닉 사회주의 공화국"
+GRR_totalist_DEF:0 "엘라다 사회주의 공화국"
+GRR_syndicalist:0 "엘라다 사회주의 공화국"
 GRR_syndicalist_ADJ:0 "그리스"
-GRR_syndicalist_DEF:0 "헬레닉 사회주의 공화국"
-GRR_radical_socialist:0 "헬레닉 사회주의 공화국"
+GRR_syndicalist_DEF:0 "엘라다 사회주의 공화국"
+GRR_radical_socialist:0 "엘라다 사회주의 공화국"
 GRR_radical_socialist_ADJ:0 "그리스"
-GRR_radical_socialist_DEF:0 "헬레닉 사회주의 공화국"
+GRR_radical_socialist_DEF:0 "엘라다 사회주의 공화국"
 GRR_social_democrat:0 "그리스"
 GRR_social_democrat_ADJ:0 "그리스"
 GRR_social_democrat_DEF:0 "그리스"
