--- a/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
@@ -8,19 +8,19 @@ QIE_equipment_effort_desc:0 "미래에 대한 비전 없이 독일제 장비를 
 QIE_motorization_effort:0 "말과 수레를 제거하라"
 QIE_motorization_effort_desc:0 "다른 강대국들이 트럭과 비행기를 사용하는 동안 우리는 말과 마차를 타고 다니는 저주를 받았습니다. 우리가 세계 무대에서 자리를 차지하려면 우린 변해야 합니다."
 QIE_doctrine_effort:0 "제국군 교리"
-QIE_doctrine_effort_desc:0 "The military doctrine's that defined ground combat during The Weltkrieg are now outdated. We must put our greatest mind's to the task of shaping the military thought of tomorrow for surely our foes do the same."
+QIE_doctrine_effort_desc:0 "세계대전에서 지상 전투를 규정했던 군사 교리는 이제 시대에 뒤떨어졌습니다. 우리는 미래의 군사교리를 구체화하는 일에 최대로 정신을 쏟아야 합니다."
 QIE_equipment_effort_2:0 "총기 개혁"
-QIE_equipment_effort_2_desc:0 "We should continue with our efforts to develop our arms internally instead of licenses and foreign purchases, our local arms industries have proposed numerous new designs for us."
+QIE_equipment_effort_2_desc:0 "우리는 라이센스와 해외 무기 구입 대신에 무기를 내부적으로 개발하려는 노력을 계속해야하며, 우리 지역의 군수 산업체들은 수많은 새 디자인들을 제안했습니다."
 QIE_mechanization_effort:0 "기계화 개발"
-QIE_mechanization_effort_desc:0 "Other nations are planning on fielding large Tank formations backed with hardened mechanised vehicles. We should seek to emulate these formations and create our own designs and doctrines to match."
+QIE_mechanization_effort_desc:0 "다른 나라들은 강화된 기계화 차량을 기반으로 한 대형 탱크의 배치를 계획하고 있습니다. 우리는 이러한 계획들을 모방하여 그에 걸맞는 우리만의 디자인과 교리를 만드는 것을 추구해야 합니다다."
 QIE_doctrine_effort_2:0 "태평양 전투 대비"
-QIE_doctrine_effort_2_desc:0 "We sense it in the air and see it on the horizon that our eternal foe Japan is coiling back to strike, we must drill our armed forces in a series of wargames to demonstrate our might."
+QIE_doctrine_effort_2_desc:0 "우리는 지평선 너머의 우리의 영원한 적 일본이 다시 우리를 공격하기 위해 기회를 노리는 것을 알고있습니다. 우리는 일본에게 우리의 힘을 보여주기 위하여 군대를 훈련시켜야 합니다다."
 QIE_equipment_effort_3:0 "완벽을 향한 노력"
-QIE_equipment_effort_3_desc:0 "With the limitless amount of funds the Emperor made available to our arms manufacturers we now possess some of the finest equipment in all of Asia but even so we should still seek to continually strive forwards."
+QIE_equipment_effort_3_desc:0 "황제가 무기 제조사에 제공하는 어마어마한 양의 자금으로 우리는 현재 아시아 전역에서 가장 훌륭한 장비들을 보유하고 있지만, 그럼에도 불구하고 우리는 계속해서 전진하기위해 노력해야 합니다."
 QIE_armor_effort:0 "독일전차 설계 모방"
-QIE_armor_effort_desc:0 "Our German friends showed us the power and ferocity of their tank formations during the intervention of 1925. We should seek to replicate the design and spirit in our own models."
+QIE_armor_effort_desc:0 "우리들의 친구인 독일은 1925년의 개입 당시 그들의 탱크 구조의 힘과 강렬함을 우리에게 보여주었습니다. 우리는 우리 모델에 그 디자인과 정신을 복제해내야만 합니다."
 QIE_special_forces:0 "제국 경비연대"
-QIE_special_forces_desc:0 "We have always had some of the finest Mongol and Manchu bannerman to serve in our elite regiments but with the current situation that is no longer the case. We should seek to reinforce and increase the size of our existing Imperial Guard regiments with fresh Chinese recruits."
+QIE_special_forces_desc:0 "우리는 항상 엘리트 연대에 복무할 수 있는 훌륭한 몽골인들과 만주인 기수들을 가지고 있었지만 현재의 상황은 그렇지 않습니다. 우리는 새로운 중국인 신병들로 기존 제국 경비연대의 보강과 증원을 도모해야 합니다."
 
 QIE_aviation_effort:0 "항공대 확장"
 QIE_aviation_effort_tt:0 "§Y공군기지§를 지을공간이 부족합니다!"
